Little improvment : avoided a call to new Integer()
git-svn-id: https://svn.apache.org/repos/asf/directory/trunks/shared@491689 13f79535-47bb-0310-9956-ffa450edef68